chore: minor adjustment to conf file

--- a/certora/basic/conf/RwaAToken.conf
+++ b/certora/basic/conf/RwaAToken.conf
@@ -9,8 +9,9 @@
   "rule_sanity": "basic", // from time to time, use "advanced" instead of "basic".
   "optimistic_loop": true,
   "process": "emv",
-  "solc": "solc8.19",
+  // "solc": "solc8.19",
   "verify": "RwaATokenHarness:certora/basic/specs/RwaAToken.spec",
   "build_cache": true,
-  "msg": "RwaAToken spec"
+  "msg": "RwaAToken spec",
+  "server": "production",
 }
