remove the build-cache

--- a/certora/basic/conf/NEW-pool-no-summarizations.conf
+++ b/certora/basic/conf/NEW-pool-no-summarizations.conf
@@ -34,7 +34,7 @@
     "depositUpdatesUserATokenSuperBalance",
     "depositCannotChangeOthersATokenSuperBalance"
   ],
-  "build_cache": true,
+//  "build_cache": true,
   "parametric_contracts": ["PoolHarness"],
   "msg": "pool-no-summarizations::partial rules",
 }
